--- a/github_name/Justfile
+++ b/github_name/Justfile
@@ -21,5 +21,5 @@ test:
     #!/bin/bash
     ok() { echo -e "\e[1;32mOK\e[0m"; }
     err() { echo -e "\e[1;31m${@}\e[0m" >&2; exit 1; }
-    result=$(just run {{ docker_user_repo }} | tr -d '\r')
+    result=$(just run https://github.com/mihaigalos | tr -d '\r')
     [[ ${result} == 'mihaigalos # Mihai Galos' ]] && ok || err "Cannot validate logic."
